Fixing Scrollbars appearing for different browsers

--- a/airport-capacity-management/client/src/SummaryPage.css
+++ b/airport-capacity-management/client/src/SummaryPage.css
@@ -31,6 +31,11 @@
   justify-content: space-between;
 }
 
+
+.info-card::-webkit-scrollbar {
+  display: none;
+}
+
 .status-bubble {
   display: inline-block;
   padding: 5px 10px;
